fixed spacing on images in cards

--- a/src/components/FollowMe/MessageCard/style.scss
+++ b/src/components/FollowMe/MessageCard/style.scss
@@ -24,7 +24,9 @@ $message-margin: 0.3rem;
 		}
 
 		&.comment-bubble{
-			
+			&:hover{
+				cursor: pointer;
+			}
 		}
 
 	}
